...

                <ImageView
                    android:id="@+id/detail_image_movie"
                    imgUrl="@{viewModel.detailContentMovie.posterPath}"
                    android:layout_width="match_parent"
...

                <TextView
                    android:id="@+id/movies_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/detail_overview_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/homepage_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/genre_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/status_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/date_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/popularity_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/vote_average_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/vote_count_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/original_title_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tagline_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/backdrop_movie"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
...

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_movies"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
...
