<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.tvshows.TvShowsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_shows"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_favorite_shows" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageNoFavorite_shows"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_data"
            app:civ_border_color="@color/blumine"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/rv_favorite_shows"
            app:layout_constraintEnd_toEndOf="@+id/rv_favorite_shows"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>